--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                     <div class="icon"><a href="https://www.instagram.com/masforce/?hl=en"><img src="pictures/instagramIcon.png"></a></div>
 
-                    <div class="icon"><a href="https://www.linkedin.com/in/mason-force/"><img src="pictures/linkedinIcon.png"></a></div>
+                    <div class="icon"><a href="https://www.linkedin.com/in/mason-force/"><img src="pictures/linkedInIcon.png"></a></div>
 
                     <div class="icon"><a href="https://github.com/masforce"><img src="pictures/githubIcon.png"></a></div>
 
