--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="author" content=" Mason Force" >
 	<meta name="description" content="Mason's Personal Webpage">
 	<meta name="keywords" content="Mason,CSS,Colorado,JavaScript,Computer">
-    <link href="http://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
     <title>Mason Force</title>
 	
     
@@ -142,7 +142,7 @@
 
                     <div class="icon"><a href="https://www.instagram.com/masforce/?hl=en"><img src="pictures/instagramIcon.png"></a></div>
 
-                    <div class="icon"><a href="https://www.linkedin.com/in/mason-force/"><img src="pictures/linkedinIcon.png"></a></div>
+                    <div class="icon"><a href="https://www.linkedin.com/in/mason-force/"><img src="pictures/linkedInIcon.png"></a></div>
 
                     <div class="icon"><a href="https://github.com/masforce"><img src="pictures/githubIcon.png"></a></div>
 
