--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     
     <script src="./siteScript.js"></script>
-    <link rel="stylesheet" type="text/css" href="./resume.css">
+    <link rel="stylesheet" type="text/css" media='screen and (min-width: 885px)' href="./resume.css">
     <link rel='stylesheet' media='screen and (min-width: 0px) and (max-width: 885px)' href='./resumeNarrow.css' />
     
 </head>
