--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <br>
                 
                 <div id="downloadOption">
-                    <a href="mason_resume.pdf" download id="downloadButton">Download My Resume</a>
+                    <a href="MasonForceResume.pdf" download id="downloadButton">Download My Resume</a>
                 </div>
 
                 <div id="socialMedia">
