--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <div class="container-fluid">
       
-      <a class="navbar-brand" href="./resume.html">
+      <a class="navbar-brand" href="./index.html">
           <p>forcemason.com</p>
       </a>
 
