--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="author" content=" Mason Force" >
 	<meta name="description" content="Mason's Personal Webpage">
 	<meta name="keywords" content="Mason,CSS,Colorado,JavaScript,Computer">
-    <link href="http://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
     <title>Mason Force</title>
     
     <!-- Latest compiled and minified CSS -->
