--- a/index.html
+++ b/index.html
@@ -188,10 +188,10 @@
 
                 <div id="subSkillsHeaders">
                     <div class="subSkillsHeader">
-                        I'm proficient in the following development environments and languages:
+                        I'm experienced with:
                     </div>
                     <div class="subSkillsHeader">
-                        <p>I'm experienced with the following technologies:</p>
+                        <p>I'm familiar with:</p>
                     </div>
                 </div>
                 
