--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
     
     <div id="footer-wrap">
         <div id="footer">
-            <p>Mason Force 2019 v1.0</p>
+            <p>Mason Force 2019 v1.0 <a href="game.html">&#10148</a></p>
         </div>
     </div>
     
