--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <br>
                 <p> I'm a social computer scientist with a passion for creativity and trying new things.<br></p>
                 <p>I'm a student at Colorado State University in Fort Collins, Colorado, where I'm working on my bachelor's degree.  Recently, I've been doing a lot of work with font-end web development, but I have  experience writing code for both the client and server-side of applications.<br></p>
-                <p>This is my homepage!  I've built this site from scratch and learned a lot about web design and development in the process.  Have a look around, and thanks for visiting.</p>
+                <p>This is my homepage!  I built this site entirely from scratch (just HTML, CSS and Javascript) and I learned a lot about web design and development in the process.  Have a look around, and thanks for visiting.</p>
 
                 
                 <h4><p>-</p><img src="pictures/signature.png"></h4>
