--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <h3>A Brief Introduction</h3>
                 <br>
                 <p> I'm a social computer scientist with a passion for creativity and trying new things.<br></p>
-                <p>I'm a student at Colorado State University in Fort Collins, Colorado, where I'm working on my bachelor's degree.  Recently, I've been doing a lot of work with font-end web development, but I have  experience writing code for both the client and server-side of applications.<br></p>
+                <p>I'm a student at Colorado State University in Fort Collins, Colorado, where I'm working on my bachelor's degree.  Recently, I've been doing a lot of work with font-end web development, but I have  experience writing code for both the client and server-side of applications.  I'm looking for a job that bridges the gap between the technical and social aspects of development.<br></p>
                 <p>This is my homepage!  I built this site entirely from scratch (just HTML, CSS and Javascript) and I learned a lot about web design and development in the process.  Have a look around, and thanks for visiting.</p>
 
                 
