--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <h3>Job Experience</h3>
             <div id="job">
                 <img class="RMSMC" src="pictures/RMSMC.jpeg">
-                <p><a href="https://www.workday.com/en-us/homepage.html">Rocky Mountain Student Media Corporation</a> (Fort Collins, CO 80521)</p>
+                <p><a href="https://www.rockymountainstudentmedia.com">Rocky Mountain Student Media Corporation</a> (Fort Collins, CO 80521)</p>
                 <p><strong>Position:</strong> Corporate Webmaster</p>  
                 <p>September 2019 to May 2020</p>
                 <div class="description" id="RMSMCDescription">
